# firm-ai-cloud

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/: pull_request_template.md  release-template.md
deploy/: .env.cn.example  .env.example  docker-compose.yml
docker/: README.md  install-docker-offline.sh
docs/: 01-mvp-backlog.md  02-information-architecture.md  03-technical-blueprint.md  04-adr-data-and-search-stack.md  05-installation.md  06-offline-installation.md  07-dev-quickstart.md  08-release-governance.md  09-v0.0.2-sprint-backlog.md  10-rbac-permission-coverage.md  11-security-operations-v0.0.3.md  12-v0.0.4-ui-iteration-plan.md  13-web-ui-quality-guardrails.md  14-v0.0.5-monitoring-bootstrap-plan.md  15-stream-sse-baseline-contract.md  16-demo-runbook.md  17-disaster-recovery-runbook.md  18-performance-reliability-baseline-v0.0.8.md  19-v0.0.9-topology-reliability-plan.md  20-v0.1x-operator-simplicity-plan.md  21-v0.1.1-validation-suite.md  22-v0.1.1-operator-runbook.md  23-v0.1.2-security-scale-evidence.md  24-v0.1.3-capacity-guidance.md  25-v0.1.4-safe-ops-planning.md  26-v0.1.4-ops-continuity-and-digest.md  27-v0.1.4-long-soak-stability.md  28-v0.1.4-multi-region-simulation.md  29-v0.1.5-operator-autonomy-plan.md  30-v0.1.5-escalation-failover-simulation.md  31-v0.1.5-operator-journey-validation.md  32-v0.1.6-operator-simplicity-v2-plan.md  33-v0.1.6-release-gate-checklist.md  34-v0.1.7-runbook-execution-closure-plan.md  35-v0.1.7-release-gate-checklist.md  36-v0.1.8-runbook-standardization-plan.md  37-v0.1.8-release-gate-checklist.md  (+50 more)
release-notes/: TEMPLATE.md  (+42 more)
services/api/: Cargo.toml  Dockerfile
services/api/migrations/: 202603020001_create_assets.sql  202603020002_cmdb_dynamic_fields.sql  202603020003_create_asset_relations.sql  202603020004_create_discovery_tables.sql  202603020005_create_discovery_events.sql  202603020006_create_discovery_notification_tables.sql  202603020007_create_discovery_notification_deliveries.sql  202603020008_create_rbac_tables.sql  202603020009_create_audit_logs.sql  202603020010_create_auth_session_tables.sql  202603030001_create_monitoring_sources.sql  202603030002_create_asset_bindings_and_lifecycle.sql  202603030003_harden_discovery_candidate_review.sql  202603030004_create_cmdb_monitoring_sync.sql  202603030005_standardize_relation_types_and_hierarchy_indexes.sql  202603040001_create_workflow_tables.sql  202603040002_add_discovery_job_next_run_at.sql  202603040003_create_ticket_tables.sql  202603040004_add_ticket_permissions.sql  202603040005_encrypt_monitoring_source_secrets.sql  202603050001_optimize_assets_and_monitoring_indexes.sql  202603050002_add_cmdb_asset_filter_indexes.sql  202603050003_create_alerting_and_setup_permissions.sql  202603050004_create_playbook_catalog_and_execution_logs.sql  202603050005_add_ops_cockpit_permission.sql  202603050006_create_local_auth_hardening_tables.sql  202603060001_create_local_mfa_recovery_codes.sql  202603060002_create_setup_bootstrap_templates.sql  202603060003_create_ops_checklist_tables.sql  202603060004_create_playbook_execution_policy.sql  202603060005_create_playbook_approval_requests.sql  202603060006_create_backup_dr_policy_tables.sql  202603070001_create_incident_command_tables.sql  202603070002_create_ticket_escalation_tables.sql  202603070003_create_restore_verification_evidence.sql  202603070004_create_handover_digest_tables.sql  202603080001_create_setup_operator_profile_runs.sql  202603080002_create_change_calendar_reservations.sql  202603080003_create_restore_evidence_compliance_policy.sql  202603080004_create_ops_runbook_template_executions.sql  (+9 more)
services/api/src/: alerts.rs  audit.rs  auth.rs  auth_api.rs  backup_dr.rs  change_calendar.rs  cockpit.rs  discovery_scheduler_worker.rs  error.rs  iam.rs  incident_command.rs  main.rs  monitoring.rs  monitoring_sync_worker.rs  ops_digest.rs  ops_runbooks.rs  playbooks.rs  secrets.rs  setup.rs  state.rs  streams.rs  tickets.rs  topology.rs  workflow.rs
services/api/src/cmdb/: assets.rs  discovery.rs  field_definitions.rs  lifecycle.rs  mod.rs  monitoring_sync.rs  notifications.rs  relations.rs
(+94 files in other folders)
