[workspace]
members = [
  "libs/common",
  "services/api",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.0.1"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
