[workspace]
members = [
  "libs/common",
  "services/api",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.0.1"
license = "Apache-2.0"

[workspace.dependencies]
async-stream = "0.3"
anyhow = "1.0"
aes-gcm = "0.10"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "derive", "macros"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal", "process", "time"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.12", features = ["v4"] }
sha2 = "0.10"
shell-words = "1.1"
