[package]
name = "api"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[dependencies]
async-stream = { workspace = true }
anyhow = { workspace = true }
aes-gcm = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
common = { path = "../../libs/common" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
shell-words = { workspace = true }
ldap3 = { workspace = true }
